syntax = "proto3";

package codebase_syncer;
option go_package = "./;codebase_syncer";

// Import required proto packages
import "google/protobuf/empty.proto";

// Token sharing request (encrypted storage)
// Share AccessToken request (includes server_endpoint)
message ShareAccessTokenRequest {
    string client_id = 1;        // Client ID
    string access_token = 2;     // Access Token
    string server_endpoint = 3;  // Cloud service endpoint
}

// Token sharing response
message ShareAccessTokenResponse {
    bool success = 1;
    string message = 2;
}

// Register project sync
message RegisterSyncRequest {
    string client_id = 1;        // Client ID
    string workspace_path = 2;     // Workspace path
    string workspace_name = 3;     // Workspace name
}

// Register sync response
message RegisterSyncResponse {
    bool success = 1;           // Success flag
    string message = 2;         // Message
}

// Sync project request
message SyncCodebaseRequest {
    string client_id = 1;        // Client ID
    string workspace_path = 2;     // Workspace path
    string workspace_name = 3;     // Workspace name
    repeated string file_paths = 4; // File paths to check
}

// Sync project response
message SyncCodebaseResponse {
    bool success = 1;           // Success flag
    string message = 2;         // Message
    string code = 3;            // Error code for specific error types
}

// Unregister project sync
message UnregisterSyncRequest {
    string client_id = 1;        // Client ID
    string workspace_path = 2;     // Workspace path
    string workspace_name = 3;     // Workspace name
}

// Version information request
message VersionRequest {
    string client_id = 1;  // Client ID
}

// Version information response
message VersionResponse {
    message Data {
        string version = 1;  // Version number
        string app_name = 2;  // Application name
        string os_name = 3;  // OS name
        string arch_name = 4;  // Architecture name
    }
    bool success = 1;           // Success flag
    string message = 2;         // Message
    Data data = 3;              // Data
}

// Check ignore file request
message CheckIgnoreFileRequest {
    string client_id = 1;        // Client ID
    string workspace_path = 2;   // Workspace path
    string workspace_name = 3;   // Workspace name
    repeated string file_paths = 4; // File paths to check
}

// Sync service definition
service SyncService {
    // Register project sync
    rpc RegisterSync(RegisterSyncRequest) returns (RegisterSyncResponse);

    // Sync project
    rpc SyncCodebase(SyncCodebaseRequest) returns (SyncCodebaseResponse);
    
    // Unregister project sync
    rpc UnregisterSync(UnregisterSyncRequest) returns (google.protobuf.Empty);
    
    // Share AccessToken (plain text transmission, server-side encrypted storage)
    rpc ShareAccessToken(ShareAccessTokenRequest) returns (ShareAccessTokenResponse);

    // Get application name and version information
    rpc GetVersion(VersionRequest) returns (VersionResponse);
    
    // Check ignore file
    rpc CheckIgnoreFile(CheckIgnoreFileRequest) returns (SyncCodebaseResponse);
}
